--- a/public/css/landingPage.css
+++ b/public/css/landingPage.css
@@ -1,4 +1,4 @@
-
+@import url(https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
 
 /* carousel */
 #HeroBanner .carousel-item img {
